--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <div class="splitscreen">
 
-                <img src="./assets/Before&AfterflyerforRiskRegisterCourse.png"
+                <img src="./assets/Before&AfterflyerforRiskRegisterCourse7.jpg"
                     alt="A_Split_Design_Showing_Before_and_After_Sharepoint_Risk_Register_Course">
 
 
