added the video

--- a/index.html
+++ b/index.html
@@ -67,10 +67,12 @@
 
             <div class="video">
 
-                <iframe width="650" height="450" src="https://www.youtube.com/embed/RZbxzGi6ins?si=FlLgoii8bzGky44U"
+                <!-- <iframe width="650" height="450" src="https://www.youtube.com/embed/RZbxzGi6ins?si=FlLgoii8bzGky44U"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+
+                    <video src="./assets/Building A Risk Register Without Risky Insanity Re-Edited.mp4" controls autoplay muted></video>
 
             </div>
 
