--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -17,6 +16,9 @@
 
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+    <!-- Link to my animation -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
 </head>
@@ -65,14 +67,15 @@
 
 
 
-            <div class="video">
+            <div class="video" data-aos="zoom-in" data-aos-duration="3000">
 
                 <!-- <iframe width="650" height="450" src="https://www.youtube.com/embed/RZbxzGi6ins?si=FlLgoii8bzGky44U"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
 
-                    <video src="./assets/Building A Risk Register Without Risky Insanity Re-Edited.mp4" controls autoplay muted></video>
+                <video src="./assets/Building A Risk Register Without Risky Insanity Re-Edited.mp4" controls autoplay
+                    muted></video>
 
             </div>
 
@@ -89,7 +92,7 @@
                     <div class="joincommunity">
 
                         <div>
-                            <p> <i> Click here to get yours now! </i> </p>
+                            <p> <i> Click here to get access now! </i> </p>
 
                             <a href="https://kjaconsulting.samcart.com/products/build-a-risk-register-in-sharepoint#/sc-checkout"
                                 target="_blank"> <button class="btn-grad"> GIVE ME ACCESS! </button> </a>
@@ -99,7 +102,7 @@
 
                     <div class="businesses">
                         <div>
-                            <p> 50+ BUSINESSES ARE USING THIS RIGHT NOW </p>
+                            <p> 40+ PROJECT MANAGERS ARE USING THIS RIGHT NOW </p>
 
                             <img src="./assets/triangularbg.png" alt="">
                             <img src="./assets/triangularbg.png" alt="">
@@ -119,6 +122,23 @@
             <!-- This used to be the lastsec but i brought it up so... alst sec but not last sec -->
 
 
+
+
+            <div class="splitscreen" data-aos="flip-down" data-aos-duration="3000">
+
+                <img src="./assets/Before&AfterflyerforRiskRegisterCourse7.jpg"
+                    alt="A_Split_Design_Showing_Before_and_After_Sharepoint_Risk_Register_Course">
+
+
+            </div>
+
+            <div class="accessbutton" data-aos="fade-right" data-aos-duration="3000">
+
+                <a href="https://kjaconsulting.samcart.com/products/build-a-risk-register-in-sharepoint#/sc-checkout"
+                    target="_blank"> <button class="btn-grad"> GIVE ME ACCESS! </button> </a>
+
+            </div>
+
             <section class="lastsec">
 
                 <div class="containerdiv stats-section" id="stats">
@@ -133,8 +153,8 @@
 
                         <div class="two">
 
-                            <h3 class="count" data-target="700">0</h3>
-                            <small> Active Members</small>
+                            <h3 class="count" data-target="1600">0</h3>
+                            <small> Subscribers</small>
 
                         </div>
 
@@ -144,14 +164,14 @@
 
                         <div class="one">
 
-                            <i class="fa-solid fa-graduation-cap"></i>
+                            <i class="fa-solid fa-clock"></i>
 
                         </div>
 
                         <div class="two">
 
-                            <h3 class="count" data-target="1000000"> 0 <span>+</span> </h3>
-                            <small> Total Student Earnings</small>
+                            <h3 class="count" data-target="500"> 0 <span>+</span> </h3>
+                            <small> Total Hours Saved</small>
 
                         </div>
 
@@ -167,8 +187,8 @@
 
                         <div class="two">
 
-                            <h3 class="count" data-target="2000"> 0 <span>+</span> </h3>
-                            <small> Clients Landed</small>
+                            <h3 class="count" data-target="15"> 0 <span>+</span> </h3>
+                            <small> Years of Experience</small>
 
                         </div>
 
@@ -182,21 +202,6 @@
 
             </section>
 
-            <div class="splitscreen">
-
-                <img src="./assets/Before&AfterflyerforRiskRegisterCourse7.jpg"
-                    alt="A_Split_Design_Showing_Before_and_After_Sharepoint_Risk_Register_Course">
-
-
-            </div>
-
-            <div class="accessbutton">
-
-                <a href="https://kjaconsulting.samcart.com/products/build-a-risk-register-in-sharepoint#/sc-checkout"
-                    target="_blank"> <button class="btn-grad"> GIVE ME ACCESS! </button> </a>
-
-            </div>
-
 
 
             <!-- The testimonial section -->
@@ -204,7 +209,7 @@
             <div class="testimonial">
 
                 <div class="text">
-                    <h1> What <u> OUR STUDENTS</u> have to say </h1>
+                    <h1> WHAT <u> OTHER STUDENTS</u> ARE SAYING </h1>
                 </div>
 
 
@@ -295,36 +300,42 @@
 
                 <fieldset>
 
-                    <legend> HOW TO CREATE YOUR REGISTER IN SHAREPOINT </legend>
+                    <legend> HERE'S WHAT'S INSIDE FOR YOU </legend>
 
                     <div class="grid-container">
                         <div class="box">
 
-                            <h3> <i> Create your register </i> </h3>
-                            We'll start by building your SharePoint-based risk register. Fast, clean, and scalable.
+                            <h3> <i> Build Your Risk Register </i> </h3>
+                            You’ll set up a complete Risk Register in SharePoint. This gives you a solid foundation for
+                            managing risks the right way from day one.
                         </div>
                         <div class="box">
 
                             <h3>
-                                <i> Add smart automation </i>
+                                <i> Make It Visually Clear & Professional </i>
                             </h3>
-                            Want an alert when someone changes a Severity score? You’ll learn how to set that up and
-                            more.
+                            You’ll learn how to format and style your Register so it’s not just functional, but also
+                            easy to read, share, and present with confidence.
                         </div>
                         <div class="box">
 
-                            <h3> <i> Create tailored views</i> </h3>
-                            Filter by owner, risk level, due date, and more. No messy tabs or duplicate spreadsheets.
+                            <h3> <i> See Risks the Way You Need</i> </h3>
+                            Learn to create custom views so you and your team can track risks in the way that makes the
+                            most sense for your work. This saves you hours and reduces confusion.
+
                         </div>
 
                         <div class="box">
 
                             <h3>
-                                <i> Link mitigation tasks </i>
+                                <i> Automate Your Workflow </i>
                             </h3>
-                            We’ll connect risks to actionable mitigation tasks and assign them to real people with
-                            notifications.
+                            Stop chasing updates! You’ll set up automatic notifications and get introduced to Power
+                            Automate, so your Risk Register works for you in the background.
+
                         </div>
+
+
                     </div>
 
 
@@ -344,6 +355,33 @@
 
 
 
+
+
+        </section>
+
+
+        <!-- 100% guarantee section -->
+
+        <section class="guarantee">
+
+            <div class="containerrr">
+
+                <div class="one-g">
+                    <img src="./assets/download-removebg-preview.png" alt="">
+                </div>
+
+                <div class="two-g">
+
+                    <h1> 100% Satisfaction Guaranteed </h1>
+
+                    I’m so confident that this course will make you permanently switch to using SharePoint for your risk
+                    registers, that I am giving you a no-risk guarantee just for giving it a try. If you don’t feel like
+                    these lessons are working out for you, simply request a full refund. No questions asked. - Therman
+
+
+
+                </div>
+            </div>
 
 
         </section>
@@ -396,6 +434,8 @@
 
         </div>
 
+
+
         <!-- About meeeee sectionss -->
 
         <section class="aboutme">
@@ -410,14 +450,14 @@
 
                     <h1> About Therman </h1>
 
-                    <p>
+
                     <p>
                         I’m Therman Trotman aka Mr SharePoint – the SharePoint expert who isn’t your typical “IT Guy”
                         and the founder of The SharePoint Helpdesk.
                         <br>
-                    </p>
 
-                    <p>
+
+
                         Over the years, I’ve helped 100s of users do their job better using the various technologies
                         available in the Microsoft 365 suite.
                         <br>
@@ -426,9 +466,7 @@
                     <p>
                         With over 22 years of experience in the IT industry, I’m your go-to guy for all things tech and
                         productivity. <br>
-                    </p>
 
-                    <p>
                         I’m the lead instructor at the SharePoint Helpdesk Academy, an academy devoted to helping
                         project managers do their work better and live better.
                         <br>
@@ -436,9 +474,7 @@
                     <p>
                         I love to show people how to make life better-using tech. My approach to teaching makes the
                         process smooth and memorable. <br>
-                    </p>
 
-                    <p>
                         More importantly, I’m here to bring the help you need.
                         <br>
                     </p>
@@ -446,12 +482,82 @@
                         In 2021, I started the SharePoint Helpdesk because I realized I’d rather teach people how to use
                         the powerful tool in their MS 365 suite to make their work better because I could only do so
                         much.<br>
-                    </p>
-
-                    <p> Our sole purpose is to bridge the gap between the end user and SharePoint through trainings for
+                        Our sole purpose is to bridge the gap between the end user and SharePoint through trainings for
                         individuals and organizations, free webinar classes, ebooks and courses.</p>
                     </p>
                 </div>
+            </div>
+        </section>
+
+        <!-- This si the last section and the social media proff section -->
+
+
+        <section class="socialmedia">
+
+            <div class="whole">
+
+                <div class="center">
+
+                    <h1>
+                        GET THE FREE
+
+
+                    </h1>
+
+                    <span> Microsoft SharePoint Course. </span>
+
+
+                </div>
+
+                <div class="text1">
+
+                    <div class="text">
+
+                        After 15 Years of working with SharePoint, I've packed all you need into this no-fluff,
+                        easy-to-follow
+                        masterclass. This course show you how to use
+                        SharePoint Sites, Lists, and Libraries the smart way.
+                    </div>
+                </div>
+
+                <div class="accessbutton">
+
+                    <a href="https://kjaconsulting.samcart.com/products/build-a-risk-register-in-sharepoint#/sc-checkout"
+                        target="_blank"> <button class="btn-grad"> GIVE ME ACCESS! </button> </a>
+
+                </div>
+
+
+            </div>
+
+            <div class="icons">
+
+
+                <a href="https://web.facebook.com/therman.trotman" target="_blank"> <i
+                        class="fa-brands fa-facebook-f"></i>
+                </a>
+
+                <a href="https://www.instagram.com/sharepoint_helpdesk/" target="_blank">
+                    <i class="fa-brands fa-square-instagram"></i>
+                </a>
+
+                <a href="https://youtube.com/@thesharepointhelpdesk?si=HjhXEdMWtakMjN6O" target="_blank"> <i
+                        class="fa-brands fa-youtube"></i>
+                </a>
+
+                <a href="https://www.linkedin.com/in/therman-trotman-15790b33/" target="_blank"> <i
+                        class="fa-brands fa-linkedin"></i>
+                </a>
+
+
+                <div class="eliel">
+                    <p>
+                        <small> Built by <a href=""> Tech Mulan </a></small>
+                    </p>
+                </div>
+
+
+
             </div>
         </section>
 
@@ -470,16 +576,22 @@
 
 
 
+    <!-- Link of my animation -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <!-- PAYSTACK JS -->
-    <script src="https://js.paystack.co/v1/inline.js"></script>
 
     <!-- MY LINKED JS -->
     <script src="script.js"></script>
+
+    <!-- Initialize animation -->
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
