--- a/index.html
+++ b/index.html
@@ -303,13 +303,13 @@
                     <legend> HERE'S WHAT'S INSIDE FOR YOU </legend>
 
                     <div class="grid-container">
-                        <div class="box">
+                        <div class="box" data-aos="fade-down" data-aos-duration="4000">
 
                             <h3> <i> Build Your Risk Register </i> </h3>
                             You’ll set up a complete Risk Register in SharePoint. This gives you a solid foundation for
                             managing risks the right way from day one.
                         </div>
-                        <div class="box">
+                        <div class="box" data-aos="fade-down" data-aos-duration="3000">
 
                             <h3>
                                 <i> Make It Visually Clear & Professional </i>
@@ -317,7 +317,7 @@
                             You’ll learn how to format and style your Register so it’s not just functional, but also
                             easy to read, share, and present with confidence.
                         </div>
-                        <div class="box">
+                        <div class="box" data-aos="fade-down" data-aos-duration="2000">
 
                             <h3> <i> See Risks the Way You Need</i> </h3>
                             Learn to create custom views so you and your team can track risks in the way that makes the
@@ -325,7 +325,7 @@
 
                         </div>
 
-                        <div class="box">
+                        <div class="box" data-aos="fade-down" data-aos-duration="1000">
 
                             <h3>
                                 <i> Automate Your Workflow </i>
