done for tonight

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
 
-            <div class="splitscreen" data-aos="flip-down" data-aos-duration="2000">
+            <div class="splitscreen" data-aos="fade-up" data-aos-duration="2000">
 
                 <img src="./assets/Before&AfterflyerforRiskRegisterCourse7.jpg"
                     alt="A_Split_Design_Showing_Before_and_After_Sharepoint_Risk_Register_Course">
@@ -345,7 +345,7 @@
             </div>
 
 
-            <div class="accessbutton">
+            <div class="accessbutton" data-aos="flip-down" data-aos-duration="2000">
 
                 <a href="https://kjaconsulting.samcart.com/products/build-a-risk-register-in-sharepoint#/sc-checkout"
                     target="_blank"> <button class="btn-grad"> GIVE ME ACCESS! </button> </a>
